Four Split change

--- a/RL/Four Split Complex Policy .ipynb
+++ b/RL/Four Split Complex Policy .ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "final_result_avg_250, avg_error, correct_stops = evaluate_policy((200, 210, 220, 230, 3, 3, 3, 1), \n",
+    "final_result_avg_250, avg_error, correct_stops = evaluate_policy(optimal_policy_250[0][1], \n",
     "                                                                 trajectories_test_250, \n",
     "                                                                 best_buy_250_test, \n",
     "                                                                 best_buy_250_test_idx, \n",
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "final_result_opt_stop_250, avg_error, correct_stops = evaluate_policy((200, 200, 210, 210, 3, 3, 3, 1), \n",
+    "final_result_opt_stop_250, avg_error, correct_stops = evaluate_policy(optimal_policy_250[1][1], \n",
     "                                                                 trajectories_test_250, \n",
     "                                                                 best_buy_250_test, \n",
     "                                                                 best_buy_250_test_idx, \n",
@@ -318,7 +318,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_result_avg_500, avg_error, correct_stops = evaluate_policy(optimal_policy_500[0][1], \n",
+    "                                                                 trajectories_test_500, \n",
+    "                                                                 best_buy_500_test, \n",
+    "                                                                 best_buy_500_test_idx, \n",
+    "                                                                 True)\n",
+    "avg_error, correct_stops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_result_opt_stop_500, avg_error, correct_stops = evaluate_policy(optimal_policy_500[1][1], \n",
+    "                                                                 trajectories_test_500, \n",
+    "                                                                 best_buy_500_test, \n",
+    "                                                                 best_buy_500_test_idx, \n",
+    "                                                                 True)\n",
+    "avg_error, correct_stops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl_four_split_avg = [final_result_avg_250 + final_result_avg_500]\n",
+    "rl_four_split_opt_stop = [final_result_opt_stop_250 + final_result_opt_stop_500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_data(obj, filename):\n",
+    "    final_file_object = open(filename, 'wb')\n",
+    "    pickle.dump(obj, final_file_object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_data(rl_four_split_avg, \"../Human Experiments/Tests/rl_four_split_avg\")\n",
+    "save_data(rl_four_split_opt_stop, \"../Human Experiments/Tests/rl_four_split_opt_stop\")"
+   ]
   }
  ],
  "metadata": {
