Error fixed and new Data added

--- a/RL/Four Split Complex Policy .ipynb
+++ b/RL/Four Split Complex Policy .ipynb
@@ -354,8 +354,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rl_four_split_avg = [final_result_avg_250 + final_result_avg_500]\n",
-    "rl_four_split_opt_stop = [final_result_opt_stop_250 + final_result_opt_stop_500]"
+    "rl_four_split_avg = [final_result_avg_250, final_result_avg_500]\n",
+    "rl_four_split_opt_stop = [final_result_opt_stop_250, final_result_opt_stop_500]"
    ]
   },
   {
