--- a/RL/Four Split Complex Policy .ipynb
+++ b/RL/Four Split Complex Policy .ipynb
@@ -18,22 +18,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name_train_250 = \"../Human Experiments/Data/RL_trajectories_1000_250.pickle\"\n",
+    "file_name_train_250 = \"RL_trajectories_1000_250.pickle\"\n",
     "file_obj_train_250 = open(file_name_train_250, 'rb')\n",
     "trajectories_train_250 = pickle.load(file_obj_train_250)\n",
     "trajectories_train_250 = [list(ele) for ele in trajectories_train_250]\n",
     "\n",
-    "file_name_test_250 = \"../Human Experiments/Data/Human_trajectories_test_250.pickle\"\n",
+    "file_name_test_250 = \"Human_trajectories_test_250.pickle\"\n",
     "file_obj_test_250 = open(file_name_test_250, 'rb')\n",
     "trajectories_test_250 = pickle.load(file_obj_test_250)\n",
     "trajectories_test_250 = [list(ele) for ele in trajectories_test_250]\n",
     "\n",
-    "file_name_train_500 = \"../Human Experiments/Data/RL_trajectories_1000_500.pickle\"\n",
+    "file_name_train_500 = \"RL_trajectories_1000_500.pickle\"\n",
     "file_obj_train_500 = open(file_name_train_500, 'rb')\n",
     "trajectories_train_500 = pickle.load(file_obj_train_500)\n",
     "trajectories_train_500 = [list(ele) for ele in trajectories_train_500]\n",
     "\n",
-    "file_name_test_500 = \"../Human Experiments/Data/Human_trajectories_test_500.pickle\"\n",
+    "file_name_test_500 = \"Human_trajectories_test_500.pickle\"\n",
     "file_obj_test_500 = open(file_name_test_500, 'rb')\n",
     "trajectories_test_500 = pickle.load(file_obj_test_500)\n",
     "trajectories_test_500 = [list(ele) for ele in trajectories_test_500]\n",
@@ -375,8 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_data(rl_four_split_avg, \"../Human Experiments/Tests/rl_four_split_avg\")\n",
-    "save_data(rl_four_split_opt_stop, \"../Human Experiments/Tests/rl_four_split_opt_stop\")"
+    "save_data(rl_four_split_avg, \"rl_four_split_avg\")\n",
+    "save_data(rl_four_split_opt_stop, \"rl_four_split_opt_stop\")"
    ]
   }
  ],
